--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "rxjs": "~7.5.0",
+    "sort-by": "^0.0.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
